# study

./: .gitignore
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  templ.cpp  templ.h
ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.sln  ConsoleApplication2.vcxproj
_docs/: MinGW или MSVC_ какой компилятор выбрать для приложений на Qt под Windows_ — Toster.ru.html  [Guide] Compiling Cocos2d-x with CLion - cocos2d-x _ C++ - Cocos Forums.htm  Псевдослучайность нам поможет_ подборка инструментов генерации ассетов для игры _ Хабр.html  Современные возможности C++, о которых надо знать всем программистам _ Блог компании RUVDS.com _ Хабр.html  Шаблон проектирования Entity-Component-System — реализация и пример игры _ Хабр.html
_docs/MinGW или MSVC_ какой компилятор выбрать для приложений на Qt под Windows_ — Toster.ru_files/: frontend.3be5542c-603c-4672-85ff-11b36598cb99.css  frontend.3be5542c-603c-4672-85ff-11b36598cb99.js.загружено  js
_docs/[Guide] Compiling Cocos2d-x with CLion - cocos2d-x _ C++ - Cocos Forums_files/: application-d10e4dcfe6f2684dceb89753a07886b4f45a1af108778fbebaa3c25ddd881eb6.js  (+7 more)
ace/: config.h
cocos2d-x/: build.cmd  build_eclipse.cmd  clion_run.cmd  compile.cmd  create.cmd
cocos2d-x/TankStrike/libs/pathfinder/src/test/: CMakeLists.txt
cocos2d-x/TankStrike/libs/pathfinder/src/test/cpp/: pathfinder_test.cpp
cocos2d-x/TankStrike/libs/pathfinder/src/test/googletest/: CMakeLists.txt
simple_sniffer/: simple_sniffer.sln
(+116 files in other folders)
